@@ -102,9 +102,12 @@ class WC_PostFinanceCheckout_Admin_Order_Completion {
 
 		$order_id                    = isset( $_POST['order_id'] ) ? absint( $_POST['order_id'] ) : null;
 		$completion_amount           = isset( $_POST['completion_amount'] ) ? wc_format_decimal( sanitize_text_field( wp_unslash( $_POST['completion_amount'] ) ), wc_get_price_decimals() ) : null;
-		$line_item_qtys              = isset( $_POST['line_item_qtys'] ) ? json_decode( sanitize_text_field( wp_unslash( $_POST['line_item_qtys'] ) ), true ) : null;
-		$line_item_totals            = isset( $_POST['line_item_totals'] ) ? json_decode( sanitize_text_field( wp_unslash( $_POST['line_item_totals'] ) ), true ) : null;
-		$line_item_tax_totals        = isset( $_POST['line_item_tax_totals'] ) ? json_decode( sanitize_text_field( wp_unslash( $_POST['line_item_tax_totals'] ) ), true ) : null;
+		// phpcs:ignore
+		$line_item_qtys              = isset( $_POST['line_item_qtys'] ) ?  array_map('sanitize_text_field', json_decode( wp_unslash( $_POST['line_item_qtys'] ), true ) ) : null;
+		// phpcs:ignore
+		$line_item_totals            = isset( $_POST['line_item_totals'] ) ? array_map('sanitize_text_field', json_decode( wp_unslash( $_POST['line_item_totals'] ), true ) ) : null;
+	    	// phpcs:ignore
+		$line_item_tax_totals        = isset( $_POST['line_item_tax_totals'] ) ? array_map('sanitize_text_field', json_decode( wp_unslash( $_POST['line_item_tax_totals'] ), true ) ): null;
 		$restock_not_completed_items = isset( $_POST['restock_not_completed_items'] ) && 'true' === sanitize_text_field( wp_unslash( $_POST['restock_not_completed_items'] ) );
 		$current_completion_id       = null;
 		$transaction_info            = null;
